maj parc et jardins

--- a/src/main/resources/mapping.properties
+++ b/src/main/resources/mapping.properties
@@ -2,7 +2,7 @@
 #Mon Dec 01 14:59:10 CET 2014
 DESCRIPTION_DESCRIPTIF_OUVERTURES=sc\:openingHours,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 TARIFS=sc\:price,string,lieux_d_art,lieux_art_contemporain
-Gardien=TEMPORAIRE\:Gardien,string,parc_et_jardin
+Gardien=pdll\:hasWatchMan,string,parc_et_jardin
 SERVICE_VELO=pdll\:hasBikeFeature,string,parking,airesDeCovoiturage,parcsRelais
 _l=ex\:coordinate,decimal,service_public,sport_loisir,mobilite,patrimoine,cinema,Hotel,bibliotheque_mediatheque,parking,action_sociale,vie_sociale,chateau_monument,enseignement,golf,jardin_familiaux,culte,musique3,salle_spectacle,musique2,musique1,equipement_culture,decheteries,vie_pratique,plage,restaurant,justice_securite,college_prive,parc_animalier_theme,mydata,dataAdeline3,dataDavy,dataVieSociale,dataSpas,dataActionSociale,dataCollegesLA,dataEnseignementNantes,dataHebergement,dataLieuxCulte,Petites_cites_de_caractere,airesDeCovoiturage,parcsRelais,lieux_art_contemporain,parc_et_jardin,festivals_printemps_ete_pays_de_la_loire
 MINISTERE_CODE=pdll\:ministryCode,string,dataSubventions,dataActionsEducativesLycees,data,dataFondSocialLyceen
@@ -14,7 +14,7 @@ DISCIPLINE=dbpedia-owl\:sport,string,manifestations_sportives
 CODE_INSEE=igeo\:codeINSEE,string,evenementsCulturel,festivals_printemps_ete_pays_de_la_loire
 GEO=pdll\:zoneGeo,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 CAPACITE_PERS=dbpprop\:seatingCapacity,integer,Hotel,dataDavy,dataHebergement
-Abris=TEMPORAIRE\:Abris,string,parc_et_jardin
+Abris=pdll\:hasShelter,string,parc_et_jardin
 SITE_WEB=dbpprop\:website,string,parking,RDV_litteraires,Librairies,lieux_d_art,airesDeCovoiturage,parcsRelais,lieux_art_contemporain,festivals_printemps_ete_pays_de_la_loire
 DEPARTEMENT=dbpedia-owl\:department, string,manifestations_sportives,RDV_litteraires,festivals_printemps_ete_pays_de_la_loire
 DENO=rdfs\:label,string,patrimoine
@@ -30,7 +30,7 @@ CAPACITE_CHAM=pdll\:numberOfRoom,string,Hotel,dataDavy,dataHebergement
 CAPACITE_VEHICULE_ELECTRIQUE=pdll\:electricCarCapacity,integer,parking,parcsRelais
 DESCRIPTION=dbpedia-owl\:abstract,string,RDV_litteraires,lieux_d_art,lieux_art_contemporain
 SITE_INTERNET=dbpprop\:website,string,cinema
-Point_d_eau=TEMPORAIRE\:Point_d_eau,string,parc_et_jardin
+Point_d_eau=pdll\:hasWaterSource,string,parc_et_jardin
 DATE_DEBUT=sc\:startDate,string,manifestations_sportives
 SERVICES=pdll\:features,string,parking
 photo_2_legende=TEMPORAIRE\:photo_2_legende,string,evenementsCulturel
@@ -58,16 +58,16 @@ departement=igeo\:departement,integer,evenementsCulturel
 TYPE=TEMPORAIRE\:TypeProblem,string,service_public,sport_loisir,mobilite,manifestations_sportives,action_sociale,vie_sociale,enseignement,culte,equipement_culture,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes,dataLieuxCulte,evenementsCulturel,festivals_printemps_ete_pays_de_la_loire
 EDIF=pdll\:edifice,string,patrimoine
 DESCRIPTION_DESCRIPTIF_TARIFS=sc\:price,string,restaurant
-Collection_vegetale=TEMPORAIRE\:Collection_vegetale,string,parc_et_jardin
+Collection_vegetale=pdll\:collectionVegetable,string,parc_et_jardin
 T\u00E9l\u00E9phone=sc\:telephone,string,bibliotheque_mediatheque,musique3,salle_spectacle,musique2,musique1
 recordid=TEMPORAIRE\:recordid,string,evenementsCulturel
 COORDINATES=TEMPORAIRE\:COORDINATES,string,evenementsCulturel
 ACCES=pdll\:transportAccess,string,lieux_d_art,lieux_art_contemporain
-Pataugeoire=TEMPORAIRE\:Pataugeoire,string,parc_et_jardin
+Pataugeoire=pdll\:hasPaddlingPool,string,parc_et_jardin
 RUBRIQUE_IDENT=TEMPORAIRE\:RUBRIQUE_IDENT,string,evenementsCulturel
 COMMENTAIRE=rdfs\:comment,string,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere
 COM=dbpprop\:location,string,patrimoine
-Sanitaires=TEMPORAIRE\:Sanitaires,string,parc_et_jardin
+Sanitaires=pdll\:hasWaterCloset,string,parc_et_jardin
 CHEQUE_VAVANCES=pdll\:acceptedPaymentMethodVoucher,string,Hotel,dataDavy,dataHebergement
 jour_max=time\:intervalFinishes,string,evenementsCulturel
 COMMUNE_LIBELLE=foaf\:name, string,Communes_geolocalises,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere,dataSubventions,dataActionsEducativesLycees,data,dataFondSocialLyceen
@@ -81,7 +81,7 @@ PAGE_FACEBOOK=TEMPORAIRE\:PAGE_FACEBOOK,string,festivals_printemps_ete_pays_de_l
 CP=sc\:postalCode,integer,cinema,Hotel,bibliotheque_mediatheque,chateau_monument,golf,musique3,salle_spectacle,musique2,musique1,plage,restaurant,college_prive,Librairies,lieux_d_art,parc_animalier_theme,mydata,dataDavy,dataSpas,dataCollegesLA,dataHebergement,lieux_art_contemporain
 VISIT_IND_GUI=pdll\:visitAloneGuide,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 THEME=pdll\:theme,string,sport_loisir,mobilite,action_sociale,vie_sociale,enseignement,culte,equipement_culture,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes,dataActionsEducativesLycees,data,dataLieuxCulte
-Mobilier_pique_nique=TEMPORAIRE\:Mobilier_pique_nique,string,parc_et_jardin
+Mobilier_pique_nique=pdll\:hasPicNicFurniture,string,parc_et_jardin
 CLAS_LABEL_2=pdll\:AFNORlabelledScore,string,Hotel,dataDavy,dataHebergement
 CLAS_LABEL_1=pdll\:AFNORlabelledScore,string,Hotel,dataDavy,dataHebergement
 RESTAU=pdll\:hasRestaurant,string,Hotel,dataDavy,dataHebergement
@@ -135,7 +135,7 @@ SURFACE_TOTALE=dbpprop\:dimensions,string,jardin_familiaux
 LOIRE_VELO=pdll\:isLabelledLoireVelo,string,Hotel,dataDavy,dataHebergement
 CHERCHEUR=pdll\:chercheur,string,patrimoine
 CATEGORIE_RECTORAT_CODE_LIBELLE=pdll\:rectoratCategoryCodeExplicit,string,dataSubventions,dataActionsEducativesLycees,data,dataFondSocialLyceen
-adresse_postale=TEMPORAIRE\:adresse_postale,string,parc_et_jardin
+adresse_postale=vcard\:street-address,string,parc_et_jardin
 MINISTERE_LIBELLE=pdll\:ministryName,string,dataSubventions,dataActionsEducativesLycees,data,dataFondSocialLyceen
 T-H_4=pdll\:isVisualImpairmentLabelled,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 AUTRES_SERVICE_MOB_PROX=pdll\:mobilityServicesNearby,string,parking,parcsRelais
@@ -148,14 +148,14 @@ ULIS=pdll\:hasUlisUnit,string,college_prive,mydata,dataCollegesLA
 CEDEX=pdll\:cedex,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 CHAINE_1=pdll\:hotelChain,string,Hotel,dataDavy,dataHebergement
 LIBTHEME=pdll\:themeLabel,string,service_public,sport_loisir,mobilite,action_sociale,vie_sociale,enseignement,culte,equipement_culture,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes,dataLieuxCulte
-Code=TEMPORAIRE\:Code,string,parc_et_jardin
+Code=pdll\:id,string,parc_et_jardin
 PRIX_1=sc\:price,string,restaurant
 ACC_VELO=pdll\:isAccueilVeloLabelled,string,Hotel,dataDavy,dataHebergement
 etat=TEMPORAIRE\:etat,string,evenementsCulturel
 SALLE_REUNION=pdll\:hasMeetingRoom,string,Hotel,dataDavy,dataHebergement
-Acces_handicap_y_compris_sanitai=TEMPORAIRE\:Acces_handicap_y_compris_sanitai,string,parc_et_jardin
+Acces_handicap_y_compris_sanitai=pdll\:hasDisabledAccess,string,parc_et_jardin
 NOM=foaf\:name,string,RDV_litteraires,Librairies,lieux_d_art
-Chien_interdit_en_laisse=TEMPORAIRE\:Chien_interdit_en_laisse,string,parc_et_jardin
+Chien_interdit_en_laisse=pdll\:dogsForbidenWithoutLead,string,parc_et_jardin
 DESC=dbpedia-owl\:abstract,string,patrimoine
 ORGANISME_NOM=TEMPORAIRE\:ORGANISME_NOM,string,evenementsCulturel
 LONGITUDE=geo\:long,decimal,Communes_geolocalises,Petites_cit\u00E9s_de_caractere,Petites_cites_de_caractere
@@ -178,7 +178,7 @@ RNE=pdll\:highschoolRNECode,string,dataSubventions,dataActionsEducativesLycees,d
 ADRESSE2=dbpprop\:location,string,lieux_d_art,lieux_art_contemporain
 NOMFIC=pdll\:id,string,patrimoine
 ADRESSE1=dbpprop\:location,string,lieux_d_art,lieux_art_contemporain
-Surface_hors_batiments=TEMPORAIRE\:Surface_hors_batiments,string,parc_et_jardin
+Surface_hors_batiments=dbpprop\:dimensions,string,parc_et_jardin
 genre_ident=TEMPORAIRE\:genre_ident,string,evenementsCulturel
 SOUTIEN=pdll\:soutien,string,lieux_d_art,lieux_art_contemporain
 ADRESSE=dbpprop\:location,string,service_public,sport_loisir,mobilite,cinema,parking,action_sociale,vie_sociale,enseignement,jardin_familiaux,culte,equipement_culture,decheteries,vie_pratique,justice_securite,college_prive,Librairies,mydata,dataAdeline3,dataVieSociale,dataActionSociale,dataCollegesLA,dataEnseignementNantes,dataEnvoleo,dataLieuxCulte
@@ -193,7 +193,7 @@ coordonnees_gps=sc\:GeoCoordinates,string,evenementsCulturel
 VISIT_IND_LIB=pdll\:visitAloneWithoutGuide,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 RUBRIQUES=TEMPORAIRE\:RUBRIQUES,string,dataEnvoleo
 NB_ELEVES=pdll\:studentNumber,integer,data,dataActionsEducativesLycees
-Jeux=TEMPORAIRE\:Jeux,string,parc_et_jardin
+Jeux=pdll\:hasPlayingArea,string,parc_et_jardin
 DESCRIPTION_DESCRIPTIF_CAPACITE=dbpprop\:seatingCapacity,string,Hotel,chateau_monument,golf,plage,restaurant,parc_animalier_theme,dataDavy,dataSpas,dataHebergement
 LOCALISATION=TEMPORAIRE\:LOCALISATION,string,dataEnvoleo
 CAPACITE_PMR=pdll\:carCapacityForDisable,string,parking,parcsRelais
@@ -228,7 +228,7 @@ TYPE_1=dbpedia-owl\:abstract,string,Hotel,chateau_monument,golf,plage,parc_anima
 PRESTA_2=pdll\:hasFamilyWelcome,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 PRESTA_1=pdll\:hasRVArea,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 CODE_POSTAL=sc\:postalCode,string,service_public,sport_loisir,mobilite,parking,action_sociale,vie_sociale,enseignement,culte,equipement_culture,decheteries,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes,dataLieuxCulte,evenementsCulturel
-Jardin_clos=TEMPORAIRE\:Jardin_clos,string,parc_et_jardin
+Jardin_clos=pdll\:enclosed_garden,string,parc_et_jardin
 HORAIRES=sc\:openingHours,string,lieux_d_art,lieux_art_contemporain
 HANDIPLAGE=pdll\:isHandiplageLabelled,string,chateau_monument,golf,plage,parc_animalier_theme,dataSpas
 photo_1_credit=TEMPORAIRE\:photo_1_credit,string,evenementsCulturel
@@ -236,8 +236,8 @@ photo_2_path=TEMPORAIRE\:photo_2_path,string,evenementsCulturel
 ANIMX=pdll\:animalAllowed,string,Hotel,dataDavy,dataHebergement
 WEB=dbpprop\:website,string,service_public,sport_loisir,mobilite,action_sociale,vie_sociale,enseignement,culte,equipement_culture,decheteries,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes,dataLieuxCulte
 GUIDE_1_CLAS=pdll\:guideGaultMillauScore,string,restaurant
-Commentaire=TEMPORAIRE\:Commentaire,string,parc_et_jardin
-$$prefixes$$=dcterms\: <http\://purl.org/dc/terms/>,\: <\#>,void\: <http\://rdfs.org/ns/void\#>,TEMPORAIRE\: <http\://temporaire.org/>,gr\: <http\://purl.org/goodrelations/>,pdll\: <http\://lodpaddle.univ-nantes.fr/>,dbpedia\: <http\://dbpedia.org/resource/>,prop-fr\: <http\://fr.dbpedia.org/property/>,foaf\: <http\://xmlns.com/foaf/0.1/>,ex\: <http\://example.org/>,owl\: <http\://www.w3.org/2002/07/owl\#>,rdfs\: <http\://www.w3.org/2000/01/rdf-schema\#>,rdf\: <http\://www.w3.org/1999/02/22-rdf-syntax-ns\#>,xsd\: <http\://www.w3.org/2001/XMLSchema\#>,dbpprop\: <http\://dbpedia.org/property/>,dbpedia-owl\: <http\://dbpedia.org/ontology/>,sc\: <http\://schema.org/>,geo\: <http\://www.w3.org/2003/01/geo/wgs84_pos\#>
+Commentaire=rdfs\:comment,string,parc_et_jardin
+$$prefixes$$=dcterms\: <http\://purl.org/dc/terms/>,\: <\#>,void\: <http\://rdfs.org/ns/void\#>,TEMPORAIRE\: <http\://temporaire.org/>,gr\: <http\://purl.org/goodrelations/>,pdll\: <http\://lodpaddle.univ-nantes.fr/>,dbpedia\: <http\://dbpedia.org/resource/>,prop-fr\: <http\://fr.dbpedia.org/property/>,foaf\: <http\://xmlns.com/foaf/0.1/>,ex\: <http\://example.org/>,owl\: <http\://www.w3.org/2002/07/owl\#>,rdfs\: <http\://www.w3.org/2000/01/rdf-schema\#>,rdf\: <http\://www.w3.org/1999/02/22-rdf-syntax-ns\#>,xsd\: <http\://www.w3.org/2001/XMLSchema\#>,dbpprop\: <http\://dbpedia.org/property/>,dbpedia-owl\: <http\://dbpedia.org/ontology/>,sc\: <http\://schema.org/>,geo\: <http\://www.w3.org/2003/01/geo/wgs84_pos\#>,vcard\: <http\://www.w3.org/2006/vcard/ns\#>
 LANGUE_4=dbpedia-owl\:language,string,Hotel,dataDavy,dataHebergement
 LANGUE_3=dbpedia-owl\:language,string,Hotel,dataDavy,dataHebergement
 LANGUE_2=dbpedia-owl\:language,string,Hotel,dataDavy,dataHebergement
