--- a/src/main/resources/mapping.properties
+++ b/src/main/resources/mapping.properties
@@ -8,7 +8,7 @@ _l=ex\:coordinate,decimal,service_public,sport_loisir,mobilite,patrimoine,cinema
 MINISTERE_CODE=pdll\:ministryCode,string,dataSubventions,dataActionsEducativesLycees,data,dataFondSocialLyceen
 HOMOLOGABLE=TEMPORAIRE\:HOMOLOGABLE,string,Petites_cites_de_caractere
 COMMUNE_CODE_INSEE=dbpprop\:insee,integer,patrimoine,Communes_geolocalises,manifestations_sportives,RDV_litteraires,Petites_cit\u00E9s_de_caractere,Librairies,lieux_d_art,Petites_cites_de_caractere,dataSubventions,dataActionsEducativesLycees,data,dataFondSocialLyceen,lieux_art_contemporain
-Acces_Tan=TEMPORAIRE\:Acces_Tan,string,parc_et_jardin
+Acces_Tan=pdll\:mobilityServicesNearby,string,parc_et_jardin
 tarif_mention_payant=TEMPORAIRE\:tarif_mention_payant,string,evenementsCulturel
 DISCIPLINE=dbpedia-owl\:sport,string,manifestations_sportives
 CODE_INSEE=igeo\:codeINSEE,string,evenementsCulturel,festivals_printemps_ete_pays_de_la_loire
@@ -237,7 +237,7 @@ ANIMX=pdll\:animalAllowed,string,Hotel,dataDavy,dataHebergement
 WEB=dbpprop\:website,string,service_public,sport_loisir,mobilite,action_sociale,vie_sociale,enseignement,culte,equipement_culture,decheteries,vie_pratique,justice_securite,dataAdeline3,dataVieSociale,dataActionSociale,dataEnseignementNantes,dataLieuxCulte
 GUIDE_1_CLAS=pdll\:guideGaultMillauScore,string,restaurant
 Commentaire=rdfs\:comment,string,parc_et_jardin
-$$prefixes$$=dcterms\: <http\://purl.org/dc/terms/>,\: <\#>,void\: <http\://rdfs.org/ns/void\#>,TEMPORAIRE\: <http\://temporaire.org/>,gr\: <http\://purl.org/goodrelations/>,pdll\: <http\://lodpaddle.univ-nantes.fr/>,dbpedia\: <http\://dbpedia.org/resource/>,prop-fr\: <http\://fr.dbpedia.org/property/>,foaf\: <http\://xmlns.com/foaf/0.1/>,ex\: <http\://example.org/>,owl\: <http\://www.w3.org/2002/07/owl\#>,rdfs\: <http\://www.w3.org/2000/01/rdf-schema\#>,rdf\: <http\://www.w3.org/1999/02/22-rdf-syntax-ns\#>,xsd\: <http\://www.w3.org/2001/XMLSchema\#>,dbpprop\: <http\://dbpedia.org/property/>,dbpedia-owl\: <http\://dbpedia.org/ontology/>,sc\: <http\://schema.org/>,geo\: <http\://www.w3.org/2003/01/geo/wgs84_pos\#>,vcard\: <http\://www.w3.org/2006/vcard/ns\#>
+$$prefixes$$=dcterms\: <http\://purl.org/dc/terms/>,\: <\#>,void\: <http\://rdfs.org/ns/void\#>,TEMPORAIRE\: <http\://temporaire.org/>,gr\: <http\://purl.org/goodrelations/>,pdll\: <http\://lodpaddle.univ-nantes.fr/>,dbpedia\: <http\://dbpedia.org/resource/>,prop-fr\: <http\://fr.dbpedia.org/property/>,foaf\: <http\://xmlns.com/foaf/0.1/>,ex\: <http\://example.org/>,owl\: <http\://www.w3.org/2002/07/owl\#>,rdfs\: <http\://www.w3.org/2000/01/rdf-schema\#>,rdf\: <http\://www.w3.org/1999/02/22-rdf-syntax-ns\#>,xsd\: <http\://www.w3.org/2001/XMLSchema\#>,dbpprop\: <http\://dbpedia.org/property/>,dbpedia-owl\: <http\://dbpedia.org/ontology/>,sc\: <http\://schema.org/>,geo\: <http\://www.w3.org/2003/01/geo/wgs84_pos\#>,vcard\: <http\://www.w3.org/2006/vcard/ns\#>,passim\: <http\://data.lirmm.fr/ontologies/passim\#>
 LANGUE_4=dbpedia-owl\:language,string,Hotel,dataDavy,dataHebergement
 LANGUE_3=dbpedia-owl\:language,string,Hotel,dataDavy,dataHebergement
 LANGUE_2=dbpedia-owl\:language,string,Hotel,dataDavy,dataHebergement
